poong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poongapp-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poongapp
  template:
    metadata:
      labels:
        app: poongapp
    spec:
      containers:
      - name: poongapp
        image: siddarthal/poong:latest
