poong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poongapp-svc
spec:
  type: ClusterIP
  selector:
    app: poongapp
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
